@@ -1,5 +1,0 @@
-Makefile
-Makefile.in
-loudmouth.c
-loudmouth.so
-loudmouth.la
