@@ -1,5 +1,9 @@
 2007-01-05  Mikael Hallendal  <micke@imendio.com>
 
+	* python/*: Removed. Yay SVN!
+
+2007-01-05  Mikael Hallendal  <micke@imendio.com>
+
 	* mono/*: Removed, unfinished, outdated and doesn't build.
 
 2006-12-23  Mikael Hallendal  <micke@imendio.com>
